--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,25 @@
 plugins {
     id "java"
     id "edu.wpi.first.GradleRIO" version "2026.1.1"
+    id "com.gorylenko.gradle-git-properties" version '2.5.0'
 }
+
+gitProperties {
+    keys = [
+        'git.branch',
+        'git.build.host',
+        'git.commit.id.abbrev',
+        'git.commit.message.short',
+        'git.commit.time',
+        'git.commit.user.email',
+        'git.commit.user.name',
+        'git.dirty',
+    ]
+    dateFormat = "yyyy-MM-dd HH:mm:ss"
+    dateFormatTimeZone = "America/Los_Angeles"
+}
+
+generateGitProperties.outputs.upToDateWhen { false } // make sure the generateGitProperties task always executes (even when git.properties is not changed)
 
 java {
     sourceCompatibility = JavaVersion.VERSION_17
@@ -104,4 +122,6 @@ wpi.java.configureTestTasks(test)
 // Configure string concat to always inline compile
 tasks.withType(JavaCompile) {
     options.compilerArgs.add '-XDstringConcat=inline'
+    options.encoding = 'UTF-8'
+    options.failOnError = true         // Ensure compilation errors cause build failure
 }
