--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,5 +59,11 @@
   ],
   "java.dependency.enableDependencyCheckup": false,
   "java.jdt.ls.vmargs": "-Xmx4G",
-  "java.compile.nullAnalysis.mode": "disabled"
+  "java.compile.nullAnalysis.mode": "disabled",
+
+"[java]": {
+"editor.defaultFormatter": "RudraPatel.prettier-plugin-java-vscode",
+},
+"editor.defaultFormatter": "RudraPatel.prettier-plugin-java-vscode",
+"editor.formatOnSave": true
 }
