--- a/build.gradle
+++ b/build.gradle
@@ -82,6 +82,8 @@ dependencies {
     annotationProcessor wpi.java.deps.wpilibAnnotations()
     implementation wpi.java.deps.wpilib()
     implementation wpi.java.vendor.java()
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation("commons-io:commons-io:2.21.0")
 
     roborioDebug wpi.java.deps.wpilibJniDebug(wpi.platforms.roborio)
     roborioDebug wpi.java.vendor.jniDebug(wpi.platforms.roborio)
